unpackaged/main/default/objects/splashthat__Entity_Field__c/splashthat__Entity_Field__c.object-meta.xml
<CustomObject>
    <description>Mapping of an API Field to a Salesforce Field</description>
    <label>Entity Field</label>
    <nameField>
        <displayFormat>EF-{000000}</displayFormat>
        <label>Entity Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>