unpackaged/main/default/objects/splashthat__Entity_Field__c/fields/splashthat__API_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>splashthat__API_Field_Label__c</fullName>
    <description>The label of the Splash API Field</description>
    <label>API Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>