unpackaged/main/default/objects/splashthat__Entity_Field__c/fields/splashthat__Entity__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>splashthat__Entity__c</referenceTo>
    <relationshipLabel>Entity Fields</relationshipLabel>
    <relationshipName>Entity_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>