unpackaged/main/default/objects/splashthat__Entity_Field__c/fields/splashthat__Status_Responded__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Status_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field holds the responded attribute for a given RSVP status.</description>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>