unpackaged/main/default/objects/splashthat__Entity_Field__c/listViews/splashthat__All.listView-meta.xml
<ListView>
    <fullName>splashthat__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>